--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -18,6 +18,7 @@
 
 :root {
     --bs-border-radius: 1.5rem;
+    --primary-color: #F85E9F;
 }
 
 body {
@@ -26,6 +27,12 @@ body {
 
 img {
     max-width: 100%;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -44,6 +51,21 @@ nav.navbar a {
 
 nav.navbar li.active a {
     color: #222831;
+}
+
+section.home {
+    position: relative;
+}
+
+section.home::before {
+    content: "";
+    background: url(../images/deco.png) no-repeat center center;
+    width: 65px;
+    height: 170px;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 1rem;
 }
 
 .btn {
@@ -66,7 +88,7 @@ nav.navbar li.active a {
 
 .btn-shadow {
     box-shadow: 0 15px 15px 0 #00000012;
-    --bs-btn-color: #F85E9F;
+    --bs-btn-color: var(--primary-color);
     font-size: 14px;
     display: inline-flex;
     gap: 10px;
@@ -88,7 +110,7 @@ nav.navbar li.active a {
 }
 
 .home h2 span {
-    color: #F85E9F;
+    color: var(--primary-color);
 }
 
 .home p {
@@ -127,6 +149,21 @@ nav.navbar li.active a {
     width: 48px;
     height: 49px;
     background: url(../icons/14.svg) no-repeat center center;
+}
+
+.section-heading h3 {
+    text-transform: uppercase;
+    color: var(--primary-color);
+    font-size: 23px;
+    font-weight: bold;
+    letter-spacing: 5px;
+}
+
+.section-heading h2 {
+    font-size: 44px;
+    font-weight: bold;
+    line-height: 120%;
+    margin: 1rem 0 0;
 }
 
 @media screen and (min-width: 992px) {
@@ -175,4 +212,30 @@ nav.navbar li.active a {
     section.home h2 {
         font-size: 40px;
     }
+
+    section.home::before { 
+        display: none;
+    }
 }   
+
+@media screen and (min-width: 1400px) {
+    .p-custom {
+        padding-left: 98px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .section-heading h2 {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .section-heading h2 {
+        font-size: 32px;
+    }
+    .section-heading h3 {
+        font-size: 16px;
+    }
+}
+
