landing page updates

--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -166,6 +166,199 @@ section.home .decoration::before {
     margin: 1rem 0 0;
 }
 
+.service {
+    height: 100%;
+    transition: all .5s ease-in-out;
+    border: 1px solid rgb(25, 24, 27, .1);
+}
+
+.service:hover {
+    box-shadow: 0 0 25px 0px rgba(0, 0, 0, .1); 
+    border-color: white;
+}
+
+.service h3 {
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.service p {
+    color: #19182584;
+    font-family: Inter;
+    font-size: 18px;
+}
+
+.destination {
+    background-color: white;
+    box-shadow: 0 0 25px 0px rgba(0, 0, 0, .1); 
+}
+
+.destination h3 {
+    font-size: 23px;
+    font-weight: bold;
+}
+
+.destination .price {
+    font-size: 23px;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+.destination .location {
+    color: rgba(25, 24, 37, 0.752);
+    font-family: Inter;
+    font-size: 18px;
+    margin-top: .5rem;
+}
+
+.destination .rating {
+    color: #FF5722;
+    font-size: 23px;
+    font-weight: bold;
+    margin-top: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.destination .rating::after {
+    content: "";
+    background: url(../icons/5.svg) no-repeat center center;
+    width: 24px;
+    height: 24px;
+    display: block;
+    margin-top: -3px;
+}
+
+.arrows {
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+
+.arrows a {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    border: 1px solid rgb(25, 24, 27, .1);
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all .5s ease-in-out;
+}
+
+.arrows svg {
+    fill: #191825;
+    transition: all .5s ease-in-out;
+}
+
+.arrows a:hover {
+    background-color: #5D50C6;
+    border-color: #5D50C6;
+}
+
+.arrows a:hover svg {
+    fill: white;
+}
+
+.travel p {
+    color: rgba(25, 24, 37, 0.50);
+    font-family: Inter;
+    font-size: 18px;
+    margin: 1.5rem 0 4rem;
+}
+
+.feature {
+    border: 1px solid rgb(25, 24, 27, .1);
+    text-align: center;
+    border-radius: 25px;
+    padding: 2rem 0;
+} 
+
+.feature h3 {
+    color: #FF5722;
+    font-size: 35px;
+    font-weight: bold;
+    margin: 0 0 .7rem;
+}
+
+.feature span {
+    color: #191825;
+    font-family: Inter;
+    font-size: 18px;
+}
+
+.travel .image {
+    background: url(../images/discount.png) no-repeat 70% 0;
+    height: 100%;
+    position: relative;
+}
+
+.travel .image::before {
+    content: "";
+    background-color: #facd49;
+    display: block;
+    height: 550px;
+    width: 1000%;
+    position: absolute;
+    top: 129px;
+    left: -1000%;
+}
+
+footer {
+    padding-bottom: 2rem;
+}
+
+footer p {
+    color: rgba(25, 24, 37, 0.50);
+    font-size: 23px;
+    margin: 2rem 0 3rem;
+}
+
+footer .social ul {
+    display: flex;
+    gap: 2rem;
+}
+
+footer .social a {
+    background-color: #5D50C6;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+footer .social a svg {
+    fill: white;
+}
+
+footer .social ul > li:nth-child(1) a svg {
+    transform: scale(.8);
+}
+
+footer .footer-links li,
+footer .footer-links a {
+    font-size: 18px;
+    font-family: Inter;
+    color: #191825c7;
+    text-decoration: none;
+}
+
+footer .footer-links li {
+    padding: .8rem 0;
+}
+
+footer .footer-links a:hover {
+    text-decoration: underline;
+}
+
+footer h3 {
+    font-weight: bold;
+    font-size: 23px;
+}
+
 @media screen and (min-width: 992px) {
     nav.navbar {
         display: block;
@@ -220,13 +413,24 @@ section.home .decoration::before {
 
 @media screen and (min-width: 1400px) {
     .p-custom {
-        padding-left: 98px;
+        padding-left: 100px;
+    }
+
+    .container-lg {
+        max-width: 1184px;
     }
 }
 
 @media screen and (max-width: 1200px) {
     .section-heading h2 {
         font-size: 40px;
+    }
+    .travel .image {
+        height: 697px;
+        background-size: cover;
+    }
+    .travel .image::before {
+        display: none;
     }
 }
 
@@ -237,5 +441,9 @@ section.home .decoration::before {
     .section-heading h3 {
         font-size: 16px;
     }
+    .travel .image {
+        height: 320px;
+    }
+
 }
 
